fix : finalizarea operatiunilor cu estimarea  consumului de combustibil si update stock
